# b3d

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.msys  Makefile.osx  README.md  runall.sh
Assets/: arrow.mat  axis.mat  bound_lines.mat  clip_plane_dbg.mat  color.mat  colormap.cm  cubemap_env.mat  cubemap_env_test.mat  cubemap_rr_surface.mat  cubemap_rr_surface_vs.mat  cubemap_surface_test.mat  default.mat  deferred_basic.mat  deferred_combine.mat  dirlight.mat  dirlight_cs.mat  dirlight_tex.mat  geo_20x20.pgm  grass_mask.pgm  heightmap_sampled.hm  hmap.ppm  instance_batch.mat  knight.dsm  lamp.mat  lamp2.mat  noise.ppm  noise1.ppm  overlay.mat  overlay_texture_border.mat  palette_16_v1.ppm  pam_depth_1.pam  pam_depth_3.pam  pine.mat  pine4.dsm  plane.dsm  pointlight.mat  quad.mat  quadtree_tesselation.mat  reflection_dst.mat  reflection_src.mat  (+23 more)
Assets/Examples/: screen_depth_r2t.mat
Assets/Fonts/: consolas_32.fnt  consolas_32.mat  consolas_32.ppm  mono.fnt  mono.mat
Assets/Materials/: clip_plane_dbg.mat  clip_plane_demo.mat  deferred_basic.mat  dirlight.mat  quadtree_tesselation.mat  reflection_src.mat  screen_dudv_distortion.mat  shadow_caster_receiver_dirlight.mat  shadow_caster_receiver_pointlight.mat  skybox_cubemap.mat  terrain_flatshading.mat  terrain_flatshading_water_env.mat  texture.mat  texture_mca.mat  tri_tesselation.mat  water_surf.mat
Assets/Postprocess/: bloom_highlight.mat  bypass.mat  gauss_blur.mat  radial_blur.mat
Assets/Shaders/: shadowmap_caster.fs  shadowmap_caster.vs
assets/fonts/: mono.ppm
assets/heightmaps/: palette_16_v1.pgm  sfo_8x8_hmap.pgm  sfo_8x8_nmap.ppm
assets/materials/: axis.mat  clip_plane_dbg.mat  (+20 more)
doc/: material-spec.yaml
examples/: CMakeLists.txt
examples/01_helloworld/: main.cc
examples/02_rotating_model/: main.cc
examples/04_ortho_camera/: main.cc
examples/05_cubemap_skybox/: main.cc
examples/06_clipping_plane/: main.cc
examples/07_render_to_texture/: main.cc
examples/08_dudv_distortion/: main.cc
examples/09_render_to_cubemap/: main.cc
examples/10_flatshading_terrain/: main.cc
examples/11_directional_light/: main.cc
examples/11_terrain_sky/: main.cc
examples/12_deferred_rendering/: main.cc
examples/12_horizontal_reflections/: main.cc
examples/13_horizontal_reflections/: main.cc
examples/13_water/: main.cc  terraingenerator_custom.h
examples/14_fog/: main.cc
examples/14_water/: main.cc  terraingenerator_custom.h
examples/15_skyfog/: main.cc
examples/16_shadowmap/: main.cc
examples/17_omni_shadowmap/: main.cc
examples/18_omni_shadowmap_multi/: main.cc
examples/20_multiple_color_attachments/: main.cc
examples/21_multicam_frustum_test/: main.cc
examples/25_instancing_raw/: main.cc
examples/26_instancing_batch/: main.cc
examples/27_tri_tesselation/: main.cc
examples/30_postprocess_gauss_blur/: main.cc
examples/31_postprocess_bloom/: main.cc
examples/32_postprocess_radialshafts/: main.cc
examples/40_quadtree_visual/: main.cc
examples/41_quadtree_tesselation/: main.cc
examples/42_atmosphere/: main.cc
examples/43_heightmap/: main.cc
examples/my/: all.h
examples/myactions/: all.h  coordinateaxes.h  dsmexporter.h  fliptriangles.h  flyingcameracontroller.h  fpsmeter.h  lightingshaderuniform.h  loadmodel.h  makeoverlay.h  reflectcamera.h  rotator.h  terraingenerator.h  terrainloader.h
examples/myhelpers/: all.h  cfg.h  cfg_actor.h  cfg_rendertarget.h  postprocesspipeline.h
sandbox/: CMakeLists.txt  ecs.cc  main.cc
sandbox/aabb_transform/: main.cc
sandbox/atmosphere/: main.cc  skydome_perez.mat  terrain_atmosphere.mat
sandbox/cubemap_render/: main.cc
sandbox/cubemap_rr/: main.cc
sandbox/fisheye/: main.cc
sandbox/frustum_check/: frustum.mat  main.cc  patch.mat
sandbox/glm_rotations/: main.cc
sandbox/grass/: grassnode.mat  grasspatch.mat  main.cc
sandbox/hmap/: main.cc  skydome_perez.mat  terrain.mat
sandbox/instances_batch/: main.cc
sandbox/instances_raw/: main.cc
sandbox/layoutmesh/: main.cc
sandbox/luatest/: main.cc
sandbox/multilights/: main.cc
sandbox/multiple_color_attachment/: main.cc
sandbox/objectpool/: main.cc  patch.mat
sandbox/oldtexture/: texture.cc  texture.h
sandbox/parent_test/: main.cc
sandbox/pointlight/: main.cc
sandbox/postprocess_bloom/: main.cc
sandbox/postprocessing_blur/: main.cc
sandbox/profiling_nonbatch/: main.cc
sandbox/qtree/: main.cc  patch.mat
sandbox/quad_tesselation/: fck.mat  main.cc  tesselation.mat
sandbox/radialshafts/: main.cc  tesselation.mat
sandbox/sandbox/: main.cc
sandbox/shadowmap/: main.cc  overlay_shadowmap.mat  shadow_caster.mat  shadow_receiver.mat
sandbox/showaxis/: main.cc
sandbox/simulation/: actions.h  main.cc  object.mat  phys.h  skydome_perez.mat
sandbox/skyfog/: main.cc
sandbox/skyfog_bloom/: main.cc
sandbox/sobel_normalmap/: main.cc
sandbox/uniformstorage/: Makefile  glenum.h  main.cc  uniformstorage.h  uniformstorage.inl
sandbox/water/: main.cc  terraingenerator_custom.h
scripts/: action_main.lua  mover.lua  printer.lua  rotator.lua  rotator_y.lua
src/: CMakeLists.txt  action.h  actor.h  actor.inl  actor_batch.h  actor_batch_storage.h  actor_pool.h  appcontext.cc  appcontext.h  array2d.h  attributelayout.h  b3d.h  batch_actor.h  batch_pool.h  camera.h  display.h  framebuffer.cc  framebuffer.h  gl_main.h  glm_main.h  input.cc  input.h  light.h  math_main.h  mesh.cc  mesh.h  meshfilter.cc  meshfilter.h  meshfilter_raw.h  meshloader.cc  meshloader.h  meshrenderer.h  renderqueue.cc  renderqueue.h  rendertarget.cc  rendertarget.h  scene.cc  scene.h  scene.inl  singleton.h  (+12 more)
src/common/: debug.h  logging.h  range.h  tags.h  util.h
src/image/: colormap.h  loader.cc  loader.h  portablepixmap.cc  portablepixmap.h
src/luascript/: luaaction.cc  luaaction.h  luascript.h
src/material/: main.h  material.cc  material.h  material_loader.cc  material_loader.h  pass.cc  pass.h  shader.cc  shader.h
src/noise/: perlin.cc  perlin.h
tests/: CMakeLists.txt  Makefile  runall.sh  test_attributelayout.cc  test_camera.cc  test_transform.cc
(+27 files in other folders)
